# Circleos

./: LICENSE  README.md
circleosd/: Readme.md
circleosd/apps/game-engine-demo/: Cargo.toml  readme.md
circleosd/apps/game-engine-demo/src/: main.rs
circleosd/auth-service/: Cargo.toml  Readme.md
circleosd/auth-service/src/: api.rs  db.rs  hash.rs  main.rs  session.rs
circleosd/circlectl/: Cargo.toml  Readme.md
circleosd/circlectl/src/: client.rs  config.rs  main.rs
circleosd/circlectl/src/commands/: Plugin.rs  service.rs  system.rs  user.rs
circleosd/core-daemon/: Cargo.toml  Readme.md
circleosd/core-daemon/src/: config.rs  main.rs  plugin.rs  rpc.rs  service_registry.rs
circleosd/plugin-manager/: Cargo.toml
circleosd/plugin-manager/src/: Readme.md  Sandbox.rs  api.rs  loader.rs  main.rs  mainfest.rs
circleosd/scripts/: Readme.md  build.sh  install.sh  run.sh
circleosd/service-registry/: Cargo.toml  Readme.md
circleosd/service-registry/src/: Registry.rs  health.rs  main.rs  process.rs  service.rs
circleosd/var/run/: circleosd.sock
daemon/: Cargo.toml  Dockerfile  Readme.md
daemon/src/: Plugin.rs  api.rs  config.rs  main.rs  security.rs  service.rs  telemetry.rs
