[package]
name = "bolt"
version = "0.1.0"
edition = "2021"
description = "Bolt — CircleOS core daemon (MVP)"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace", "cors"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"

# For command-line args (optional)
clap = { version = "4", features = ["derive"] }

# For filesystem ops
fs_extra = "1.2"

