toml
[package]
name = "circlectl"
version = "0.1.0"
edition = "2021"
authors = ["You <you@example.com>"]
description = "CircleOSD CLI controller"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
