[package]
name = "core-daemon"
version = "0.1.0"
edition = "2021"
authors = ["You <you@example.com>"]
description = "CircleOSD core daemon - service registry, plugin manager, auth, rpc"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
argon2 = "0.4"
rand_core = "0.6"
