[package]
name = "plugin-manager"
version = "0.1.0"
edition = "2021"
authors = ["You <you@example.com>"]
description = "CircleOSD plugin manager: load native (.so/.dll) and wasm plugins"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
libloading = "0.7"
wasmtime = { version = "8.2.0", features = ["async"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
