[package]
name = "service-registry"
version = "0.1.0"
edition = "2021"
authors = ["You <you@example.com>"]
description = "Service registry and process supervisor for CircleOSD"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
